Fix Dark Mode Bug

--- a/src/style.scss
+++ b/src/style.scss
@@ -26,6 +26,7 @@ $navbar-breakpoint: 400px;
 // HTML Tags
 
 body {
+  height: 100vh;
   user-select: none;
 
   &::-webkit-scrollbar {
